--- a/style.css
+++ b/style.css
@@ -54,9 +54,9 @@ body {
     border: #AD0606FF !important;
 }
 
-.btn-success.active, .btn-danger.active{
+.btn-success.active {
     opacity: 1;
-    pointer-events: visible;
+    pointer-events: auto;
     box-shadow: 0 0 10px dimgray;
 }
 
